# hdrbp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yaml
docs/source/: conf.py  index.rst
hdrbp/: __init__.py  _backtester.py  _portfolio.py  _rolling_window.py  _step.py  _strategy.py  _util.py  asset.py  covariance.py  date.py  metric.py  simulation.py  weight.py
