[tool.poetry]
name = "hdrbp"
version = "0.1.0"
description = "High-Dimensional Risk-Based Portfolio"
authors = ["Giuseppe Tinti Tomio <g.tinti.tomio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "^2.13.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
