[tool.poetry]
name = "hdrbp"
version = "0.1.0"
description = "High-Dimensional Risk-Based Portfolio"
authors = ["Giuseppe Tinti Tomio <g.tinti.tomio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
cvxopt = "^1.2.6"
numba = "^0.53.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
isort = "^5.8.0"
mypy = "^0.901"
pre-commit = "^2.13.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
